# RubiksCube_project

./: .gitignore  CMakeLists.txt  README.md
Rubik_Project/: .gitignore  3dsloader.cpp  3dsloader.h  CMakeLists.txt  camera.h  figura.h  helper.h  main.cpp  matriz.h  rubik.h  skybox.h  spaceship.h  transform.h  vertex.h
Rubik_Project/solver/: random.h  solve.h
