#add_subdirectory( Project_00 )
#add_subdirectory( Project_01 )
#add_subdirectory( Project_02 )
#add_subdirectory( Project_03 )
#add_subdirectory( Lab_01 )
#add_subdirectory( Lab_02 )
#add_subdirectory( Lab_03 )
#add_subdirectory( Lab_04 )
#add_subdirectory( Lab_05 )
#add_subdirectory( LabProject_02 )
add_subdirectory( Rubik_Project )



#add_subdirectory ( hw0-glfw )
